add: initial dataset loading and processing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar color="primary" role="heading">
   Data Studio
+
+  <nav>
+    <a mat-stroked-button routerLink="/datasets">Browse Data</a>
+    <a mat-stroked-button routerLink="/datasets/new">Add Data</a>
+  </nav>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
