--- a/src/app/datasets/columns-table/columns-table.component.html
+++ b/src/app/datasets/columns-table/columns-table.component.html
@@ -1,30 +1,46 @@
-<div class="table-container mat-elevation-z4">
-  <table mat-table [dataSource]="columns" class="">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-    </ng-container>
+<table mat-table [dataSource]="columns">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="min">
-      <th mat-header-cell *matHeaderCellDef class="num">Min</th>
-      <td mat-cell *matCellDef="let row" class="num">{{ row.stats.min | number:'1.0-2' }}</td>
-    </ng-container>
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let row">{{ row.type }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="max">
-      <th mat-header-cell *matHeaderCellDef class="num"> Max </th>
-      <td mat-cell *matCellDef="let row" class="num"> {{row.stats.max | number:'1.0-2' }} </td>
-    </ng-container>
+  <ng-container matColumnDef="unique">
+    <th mat-header-cell *matHeaderCellDef>Unique Values</th>
+    <td mat-cell *matCellDef="let row">
+      {{ row.stats.exceededUniqueLimit ? '> ' + (uniqueLimit | number) : (row.stats.uniqueCount | number) }}
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="avg">
-      <th mat-header-cell *matHeaderCellDef class="num"> Avg. </th>
-      <td mat-cell *matCellDef="let row" class="num"> {{row.stats.avg | number:'1.0-2' }} </td>
-    </ng-container>
+  <ng-container matColumnDef="min">
+    <th mat-header-cell *matHeaderCellDef class="num">Min</th>
+    <td mat-cell *matCellDef="let row" class="num">
+      {{ row.type == ColumnType.Alphanumeric ? 'N/A' : (row.stats.min | number:'1.0-2') }}
+    </td>
+  </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns; let i = index"
-      [routerLink]="['column', i]"
-    ></tr>
-  </table>
-</div>
+  <ng-container matColumnDef="max">
+    <th mat-header-cell *matHeaderCellDef class="num"> Max </th>
+    <td mat-cell *matCellDef="let row" class="num">
+      {{ row.type == ColumnType.Alphanumeric ? 'N/A' : (row.stats.max | number:'1.0-2') }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="avg">
+    <th mat-header-cell *matHeaderCellDef class="num"> Avg. </th>
+    <td mat-cell *matCellDef="let row" class="num">
+      {{ row.type == ColumnType.Alphanumeric ? 'N/A' : (row.stats.avg | number:'1.0-2') }}
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns; let i = index"
+    [routerLink]="['column', i]"
+  ></tr>
+</table>
