--- a/src/app/datasets/column/column.component.html
+++ b/src/app/datasets/column/column.component.html
@@ -4,4 +4,4 @@
   </a>
   {{ (column$ | async).name }}
 </h2>
-<ds-column-chart [chart]="(column$ | async).chart"></ds-column-chart>
+<ds-column-chart [data]="(chartData$ | async)"></ds-column-chart>
