--- a/src/app/datasets/column-chart/column-chart.component.scss
+++ b/src/app/datasets/column-chart/column-chart.component.scss
@@ -19,6 +19,7 @@
   padding-right: 12px;
   height: 0;
   position: relative;
+  text-align: right;
 
   .label {
     transform: translateY(-10px);
